--- a/FP/nbproject/project.properties
+++ b/FP/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/testfp.jar
+dist.jar=${dist.dir}/FP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/testfp
+dist.jlink.output=${dist.jlink.dir}/FP
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=testfp
+jlink.launcher.name=FP
 main.class=testfp.Testfp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
